assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah:100,200,300,400,500,600,700|Special+Elite:100,200,300,400,500,600,700&display=swap');

/*--------------------------------Colours*/

.nav {
    background-color: #22230a;
}


/*--------------------------------Heading*/

header {
    margin: 0;
}

.nav {
    margin-left: 0px;
    max-height: 60px;
}

.logo {
    background: url("../images/logo.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    padding-left: 100px;
    padding-bottom: 10px;
    margin-left: 20px;
    min-height: 40px;
    max-height: 60px;
    transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;

}

/*--------------------------------Nav */

.nav-link {
    font-family: "Special elite", sans-serif;
    font-size: 15px;
    font-weight: 500;
    text-transform: uppercase;
    color: #f3e906;
    margin-left: 10px;
}

.navbar-dark .navbar-nav .active>.nav-link {
    color: #f3e906;
}

.navbar-dark .navbar-nav .nav-link {
    color: #f3e906;
}

.navbar.bg-dark {
    background-image: -webkit-gradient(linear, left top, left bottom, from(#bfbfbf), color-stop(50%, #999), to(#8f8f8f));
    background-image: linear-gradient(#bfbfbf, #22230a 50%, #8f8f8f);
    background-repeat: no-repeat;
    -webkit-filter: none;
    filter: none;
    border: 1px solid #807f7f;
}

/*--------------------------------Button */

.btn {
    font-family: "Special elite", sans-serif;
    font-weight: 600;
    color: #717163;
    background-color: #f3e906;
}

.btn-secondary {
    background-image: -webkit-gradient(linear, left top, left bottom, from(#bfbfbf), color-stop(50%, #999), to(#8f8f8f));
    background-image: linear-gradient(#807f7f, #f3e906 50%, #807f7f);
    background-repeat: no-repeat;
    -webkit-filter: none;
    filter: none;
    border: 1px solid #807f7f;
    box-shadow: -2px 1px 67px 8px rgba(34, 35, 10, 0.61);
}

.jumbotron {
    height: 70%;
    width: 50%;
    margin-bottom: 0;
    opacity: 0.95;
}

/*--------------------------------Form */

.form-control {
    font-family: "Special elite", sans-serif;
    font-weight: 300;
}

/*--------------------------------Body */

.container-fluid {
    margin-left: 20px;
    margin-right: -20px;
}

.con-flu {
    background-image: url("../images/monkees.jpg");
    background-repeat: no-repeat;
    background-size: cover;

}


/*--------------------------------Footer */

footer {
    font-family: "Gloria Hallelujah", sans-serif;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#bfbfbf), color-stop(50%, #999), to(#8f8f8f));
    background-image: linear-gradient(#807f7f, #22230a 50%, #807f7f);
    background-repeat: no-repeat;
    -webkit-filter: none;
    filter: none;
    border: 1px solid #807f7f;
    color: #f3e906;
    min-height: 120px;
    margin-left: -15px;
    margin-right: -15px;
}

.Top-songs i {
    font-size: 18px;
    color: #f3e906;
    text-align: center;
    padding-left: 5px;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}


.social-links {
    padding-bottom: 15px;

}

.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 13px;
    line-height: 7px;
    text-align: center;
    color: #f3e906;
    background: #8f8f8f;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    background-color: #c2de56;
}

#footer-details {
    padding: 20px;
}

/*--------------------------------General */

h2,
h3,
h4,
h5 {
    margin-bottom: 0.5rem;
    font-weight: 500;
    line-height: 1.2;
    color: #f3e906;
}

h1 {
    font-family: "Special elite", sans-serif;
    font-weight: 500;
    text-transform: uppercase;
    color: #f3e906;
}

.display-3 {
    text-shadow: 4px 3px 5px #22230ad4;
}


/*--------------------------------Cards*/

.bg-light-yellow {
    background-color: #f3e906;
}

.bg-color {
    background-color: #22230a;
}

.text-light-yellow {
    color: #f3e906;
}

.text-color {
    color: #22230a;
}

.card-body-1 {
    padding-left: 10px;
    padding-right: 10px;
    font-family: "Special elite", sans-serif;
    color: #f3e906;
}

.card-body-2 {
    padding-left: 10px;
    padding-right: 10px;
    font-family: "Special elite", sans-serif;
    color: #22230a;
}

/*--------------------------------Media */

@media (max-width: 768px) {
    .jumbotron {
        height: 100%;
        width: 100%;
        opacity: 0.85;

    }

    .con-flu {
        background-image: none;
        background-color: #c0bb41;
    }

    .display-3 {
        font-size: 3.5rem;
    }
}

/*-------------------------------Body */

body {
    background-color: #d9d9d9;
}

.title {
    padding-top: 20px;
    padding-bottom: 30px;
    text-align: center;
    font-size: 40px;
    background-color: #d9d9d9;
    text-shadow: 4px 3px 5px #22230ad4;
}

.first-text {
    text-align: center;
    font-family: "Special elite", serif;
    font-size: 20px;
    color: #22230a;
}

